--- a/packages/svelte/index.html
+++ b/packages/svelte/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blossom Vue</title>
+    <title>Blossom Svelte</title>
   </head>
   <body>
     <div id="app"></div>
