--- a/packages/alpine/index.html
+++ b/packages/alpine/index.html
@@ -11,20 +11,35 @@
     <div class="page">
       <h1>Blossom Carousel - Alpine.js</h1>
 
-      <ul x-data="carousel()" class="carousel">
-        <li class="slide">Slide 1</li>
-        <li class="slide">Slide 2</li>
-        <li class="slide">Slide 3</li>
-        <li class="slide">Slide 4</li>
-        <li class="slide">Slide 5</li>
-        <li class="slide">Slide 6</li>
-        <li class="slide">Slide 7</li>
-        <li class="slide">Slide 8</li>
-        <li class="slide">Slide 9</li>
-        <li class="slide">Slide 10</li>
-        <li class="slide">Slide 11</li>
-        <li class="slide">Slide 12</li>
-      </ul>
+			<div x-data="carousel({ load: 'always' })" class="wrapper">
+				<ul class="carousel" x-ref="carousel">
+					<li class="slide">1</li>
+					<li class="slide">2</li>
+					<li class="slide">3</li>
+					<li class="slide">4</li>
+					<li class="slide">5</li>
+					<li class="slide">6</li>
+					<li class="slide">7</li>
+					<li class="slide">8</li>
+					<li class="slide">9</li>
+					<li class="slide">10</li>
+					<li class="slide">11</li>
+					<li class="slide">12</li>
+					<li class="slide">13</li>
+					<li class="slide">14</li>
+					<li class="slide">15</li>
+					<li class="slide">16</li>
+					<li class="slide">17</li>
+					<li class="slide">18</li>
+					<li class="slide">19</li>
+					<li class="slide">19</li>
+				</ul>
+
+				<div class="controls">
+					<button @click="prev()">Previous</button>
+					<button @click="next()">Next</button>
+				</div>
+			</div>
     </div>
 
     <script type="module">
